log/build_2024-11-10_21-48-58/go1_navigation/stderr.log
  File "/home/yk/rosros/install/go1_navigation/lib/python3.10/site-packages/go1_navigation/static_map_publisher.py", line 71
    self.get_logger().info('Map published')j
                                           ^
SyntaxError: invalid syntax

